--- a/ipad.html
+++ b/ipad.html
@@ -911,7 +911,7 @@ function frida_script() { if(arguments.length) return new Error().line;
 							<p class="content"  style="padding-top: 10px;">
 								<center>Misc</center>								
 							</p>
-                            <van-checkbox onclick="window.location.href = '/iphone.html';" style="margin-left: 10px;" icon-size="25px">iPhone Mode</van-checkbox>
+                            <van-checkbox onclick="window.location.href = '/standleo/iphone.html';" style="margin-left: 10px;" icon-size="25px">iPhone Mode</van-checkbox>
                             <br>
 							<van-checkbox onclick="location.reload()">Reload</van-checkbox>
                             <br>
