--- a/iphone.html
+++ b/iphone.html
@@ -285,7 +285,7 @@ $(document).ready(function(){
 		ctx.textAlign="center";
 		ctx.fillStyle="red";
 		ctx.font='40px "Arial, sans-serif"';
-		ctx.fillText(("t.me/anoncheats"), (canvas.width)/2,50);//dC5tZS9pcGFicmF3bHRhcA==
+		ctx.fillText(("t.me/Project_C_deb"), (canvas.width)/2,50);//dC5tZS9pcGFicmF3bHRhcA==
     
         for(let i=0; i<gRoles.length; i++)
         {
